Sun May  4 17:58:12 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.force_zone!): New private method.
	  (Time.make_time): Use Time.force_zone!.
	  (Time.strptime): Ditto.
	  (Time.rfc2822): Ditto.
	  (Time.xmlschema): Ditto.

	* lib/rss/rss.rb (Time.w3cdtf): Use Time.force_zone!.

Sun May  4 10:22:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* math.c (math_atan2): return values like as expected by C99 if
	  both two arguments are infinity.  based on the patch by cremno
	  phobia <cremno AT mail.ru> in [ruby-core:62310].  [Feature #9799]

Sun May  4 03:46:42 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.httpdate): Always return a UTC Time object.

Sun May  4 03:26:39 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.make_time): Refactored.

Sun May  4 02:53:17 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.rfc2822): Fix year completion.
	  Produce fixed-offset time object if appropriate.
	  (Time.xmlschema): Produce fixed-offset time object if appropriate.

Sat May  3 23:52:20 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (make_time): Produce fixed-offset time object if
	  appropriate.
	  (Time.strptime): Use d[:zone] instead of d[:offset].

	* lib/rss/rss.rb (Time.w3cdtf): Produce fixed-offset time object if
	  appropriate.

Sat May  3 20:21:38 2014  Tanaka Akira  <akr@fsij.org>

	* lib/time.rb (Time.strptime): Use d[:offset] if d[:seconds] is not
	  given.
	  Reported by tadayoshi funaba.  [ruby-core:62322]

Sat May  3 04:04:16 2014  Eric Wong  <e@80x24.org>

	* complex.c (parse_comp): replace ALLOCA_N with ALLOCV_N/ALLOCV_END
	  [Bug #9608]
	* rational.c (read_digits): ditto

Sat May  3 00:06:30 2014  Naohisa Goto  <ngotogenome@gmail.com>

	* file.c (HAVE_STRUCT_STATVFS_F_BASETYPE): File::Statfs#fstypename
	  is supported on AIX, HP-UX, and Solaris, by using the value of
	  struct statvfs.f_basetype.

	* configure.in (HAVE_STRUCT_STATVFS_F_BASETYPE): check struct